sass/5_sections/_portfolio.scss
.testdiv {
  float: none;
  @include for-tablet-portrait-up { float: left !important; }
}

.portfolio-wrapper {
  position: fixed;
  top: 0; left: 0; right: 0; bottom: 0;
  overflow: hidden;
  pointer-events: none;
  // float: left;
  // @include for-phone-only { float: none; }
  // float: none;
  // @include for-tablet-portrait-up { float: left !important; }
  .portfolio-overlay {
    position: fixed;
    top: 0; bottom: 0; left: 0; right: 0;
    display: block;
    content: '';
    overflow: hidden;
    background: $portfolio-overlay-color;
    transition: opacity 0.3s ease-out;
    opacity: 0;
    will-change: opacity;
  }
  .portfolio {
    position: absolute;
    top: 100vh; left: 0; right: 0;
    // overflow-y: overlay;
    // height: 200vh;
    // min-height: 200vh;
    // bottom: -100vh;
    backface-visibility: hidden;
    background: $portfolio-bg-color;
    transition: transform 0.4s ease-in;
    transform: translateY(0);
    will-change: transform;
  }
}

.portfolio-content {
  @include container;
  @include responsive-width;
  position: relative;
  will-change: opacity;
  .portfolio-nav {
    position: relative;
    @include container;
    // @include gutters(4);
    @include gutters();
    @include padding(top, 1);
    // padding-top: 7rem;
    .portfolio-nav-a {
      user-select: none;
      padding: 0 2rem;
      transition: color 0.3s ease;
      @include for-tablet-landscape-up {
        padding: 0 3rem;
        display: inline-block;
        float: left;
      }
      &:first-child { padding-left: 0; margin-left: 0; }
      &.active-window { pointer-events: none; }
    }
  }
}

html.portfolio-opening,
html.portfolio-open {
  overflow: hidden;
  background-color: $portfolio-overlay-color;
  body { overflow-y: scroll; }
  &.portfolio-tab-1 .portfolio-wrapper { overflow-y: overlay; }
  &.portfolio-tab-2a .portfolio-wrapper, &.portfolio-tab-2b .portfolio-wrapper {
    @include for-tablet-landscape-max { overflow-y: scroll; }
  }
  .portfolio-wrapper { pointer-events: auto; }
  .portfolio-overlay { opacity: 1; }
  .portfolio {
    transition: transform 0.4s ease-out;
    // transform: translateY(-85vh);
    transform: translateY(-100vh);
    @include for-tablet-portrait-up { transform: translateY(-70rem); }
    @include for-tablet-landscape-up { transform: translateY(-56rem); }
    @include for-big-desktop-up { transform: translateY(-65rem); }
  }
}

// html.portfolio-opening,
html.portfolio-open {
  @include for-tablet-landscape-max {
    &#index, &#about, &#info {
      background-color: $portfolio-bg-color;
      body {
        background-color: $portfolio-bg-color;
        > header, > main {
          visibility: hidden;
          max-height: 0;
        }
      }
    }
  }
}

html.portfolio-closing {
  overflow: hidden;
}

#tab-1 {
  @include container;
  // margin-top: 4.7rem;
  padding-top: 4.7rem;
}

#tab-2 {
  @include container;
  @include gutters();
  // margin-top: 4rem;
  padding-top: 4rem;
}

#tab-1, #tab-2 {
  @include for-tablet-landscape-max {
    min-height: 100vh !important;
    // margin: 0 !important;
    // padding: 0 !important;
    // top: 0;
    // bottom: 0;
    // position: absolute;
    height: auto !important;
  }
}

